Bug 1457743 - Fix check for entering momentum-scrolling codepath after both fingers are released in a two-finger pan. r=kats, a=jcristau

MozReview-Commit-ID: 587mYzBf2aB

--HG--
extra : source : f4ec7081819fb5cf196ba542292f8ea81ca6487c